<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/selectedDateText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/selected_date"
            android:textSize="18sp" />

        <Button
            android:id="@+id/startTimeButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:height="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/select_start_time" />

        <TextView
            android:id="@+id/startTimeText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/start_time"
            android:textSize="16sp" />

        <Button
            android:id="@+id/endTimeButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/select_end_time" />

        <TextView
            android:id="@+id/endTimeText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/end_time"
            android:textSize="16sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/viewSavedButton"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:text="@string/view_saved_times"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>